# LightInkLua

./: README.md
Example/lua/: BindClass.lua  BindInherit.lua  BindStatic.lua
Example/src/: BindClass.cpp  BindInherit.cpp  BindStatic.cpp  Main.cpp
Linux/: CMakeLists.txt
Linux/Example/: CMakeLists.txt
Linux/LightInkLua/: CMakeLists.txt
include/Atomic/: mintomic.h  mintomic_msvc.h
include/Common/: AutoPtr.cpp  AutoPtr.h  CharPtrBridge.h  Config.h  Log.h  RefCounter.h  RuntimeError.h  SharedPtr.cpp  SharedPtr.h  Type.h  TypeTool.h
include/LuaEngine/: LuaCFunctionTraits.h  LuaClassInfo.h  LuaClassPropertyTraits.h  LuaDefAutoTool.h  LuaDefTool.h  LuaDefTraits.h  LuaEngine.h  LuaFixFunction.h  LuaIndexMetatable.h  LuaInt64.h  LuaIterator.h  LuaLib.h  LuaMetatableTraits.h  LuaModule.h  LuaNewClassTraits.h  LuaOptionTool.h  LuaRef.h  LuaRegister.cpp  LuaRegister.h  LuaStack.h  LuaStateProtect.h  LuaTableRef.h  LuaUserdata.h  LuaUserdataForClass.h
include/LuaEngine/lua/: luaconf.h
src/Atomic/: mintomic_gcc.c
src/Common/: LightInkVersion.cpp  RefCounter.cpp  RuntimeError.cpp  SmallObject.cpp
src/LuaEngine/: LuaEngine.cpp  LuaIndexMetatable.cpp  LuaInt64.cpp  LuaIterator.cpp  LuaModule.cpp  LuaRef.cpp  LuaTableRef.cpp
src/LuaEngine/lua/: lapi.c  lauxlib.c  lbaselib.c  lcode.c  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  lmathlib.c  lmem.c  loadlib.c  lobject.c  lopcodes.c  loslib.c  lparser.c  lstate.c  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  lundump.c  lvm.c  lzio.c  print.c
windows/: LightInkLua.sln  clear.bat
windows/Example/: Example.vcxproj  Example.vcxproj.filters
windows/LightInkLua/: LightInkLua.vcxproj  LightInkLua.vcxproj.filters
xmake/: xmake.lua
